# ftag

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  core.rs  filter.rs  gui.rs  interactive.rs  lib.rs  load.rs  main.rs  open.rs  query.rs  read.rs  tui.rs  walk.rs
