[package]
name = "ftag"
version = "0.3.3"
edition = "2021"
authors = ["Ranjeeth Mahankali <ranjeethmahankali@gmail.com>"]
description = "CLI tool for tagging and searching files. See README.md for more info."
readme = "README.md"
repository = "https://github.com/ranjeethmahankali/ftag"
license = "GPL-3.0-only"
keywords = ["file", "tag", "search", "organize", "archive"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
glob-match = "0.2"
edit = "0.1"
crossterm = "0.27.0"
ratatui = "0.26"
opener = "0.6"
itertools = "0.14.0"
# Dependencies for the GUI
egui = "0.28"
eframe = "0.28"
egui_extras = { version = "0.28", default-features = false, features = ["all_loaders", "image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[[bin]]
name = "ftag"
path = "src/cli.rs"

[[bin]]
name = "ftagui"
path = "src/gui.rs"

# For smaller binary size.
[profile.release]
strip = true  # Automatically strip symbols
panic = "abort" # Don't unwind stack. Should never panic.
codegen-units = 1
