[package]
name = "ftag"
version = "0.4.7"
edition = "2021"
authors = ["Ranjeeth Mahankali <ranjeethmahankali@gmail.com>"]
description = "CLI tool for tagging and searching files. See README.md for more info."
readme = "README.md"
repository = "https://github.com/ranjeethmahankali/ftag"
license = "GPL-3.0-only"
keywords = ["file", "tag", "search", "organize", "archive"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["cargo"] }
fast-glob = "0.4.3"
aho-corasick = "1.1.3"
ahash = "0.8.11"
edit = "0.1.5"
crossterm = "0.28.1"
ratatui = "0.29.0"
opener = "0.7.2"
# Dependencies for the GUI
egui = "0.28.1"
eframe = "0.28.1"
egui_extras = { version = "0.28.1", default-features = false, features = ["all_loaders", "image"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }

[[bin]]
name = "ftag"
path = "src/cli.rs"

[[bin]]
name = "ftagui"
path = "src/gui.rs"

# For smaller binary size.
[profile.release]
strip = true # Automatically strip symbols
panic = "abort" # Don't unwind stack. Should never panic.
codegen-units = 1
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false # Automatically strip symbols
debug = true
