[package]
name = "ftag"
version = "0.8.1"
edition = "2024"
authors = ["Ranjeeth Mahankali <ranjeethmahankali@gmail.com>"]
description = "CLI tool for tagging and searching files. See README.md for more info."
readme = "README.md"
repository = "https://github.com/ranjeethmahankali/ftag"
license = "GPL-3.0-only"
keywords = ["file", "tag", "search", "organize", "archive"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Used by the CLI.
crossterm = "0.29"
fast-glob = "1.0"
# Dependencies for the GUI
egui = "0.32"
eframe = "0.32"
egui_extras = { version = "0.32", default-features = false, features = ["default", "all_loaders", "image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[[bin]]
name = "ftag"
path = "src/cli.rs"

[[bin]]
name = "ftagui"
path = "src/gui.rs"

# For smaller binary size.
[profile.release]
strip = true # Automatically strip symbols
panic = "abort" # Don't unwind stack.
codegen-units = 1
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false # Automatically strip symbols
debug = true
